kube-pr/carlos_web_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: carlos-web-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ${PULL_REQUEST_ID}.carlos-kube.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: carlos-web-service
            port:
              number: 80
